@@ -1,5 +1,10 @@
 2009-01-22  Gary Benson  <gbenson@redhat.com>
 
+	* ports/hotspot/src/cpu/zero/vm/stackPrinter_zero.hpp
+	(print_zero_threads): New debug function.
+
+2009-01-22  Gary Benson  <gbenson@redhat.com>
+
 	* patches/icedtea-cc-interp-jvmti.patch: Reenable thread signalling.
 
 2009-01-21  Omair Majid  <omajid@redhat.com>
